fixed fancytree outline and today checkbox alignment

--- a/xgds_map_server/static/xgds_map_server/css/fancytree_custom.css
+++ b/xgds_map_server/static/xgds_map_server/css/fancytree_custom.css
@@ -23,6 +23,11 @@ span.fancytree-title {
     font-size: 63%;
     z-index: 3; /* over ext-wide titles */
   }
+  
+.fancytree-container {
+	outline:none !important;
+}
+
 /*__BEGIN_LICENSE__
 /* Copyright (c) 2015, United States Government, as represented by the
 /* Administrator of the National Aeronautics and Space Administration.
